Allow passing ints as enum args

https://bugzilla.gnome.org/show_bug.cgi?id=622584